--- a/VaccinationManagement/src/main/resources/application.properties
+++ b/VaccinationManagement/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/db_vaccine_cam_chau?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=ainguhon123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
